--- a/index.html
+++ b/index.html
@@ -6,10 +6,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wow Food</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <h2>Welcome</h2>
+    <section class="top-field">
+        <div class="food-order">
+            <h1><span class="orange">Skip</span> The Diet,<br>Just Eat Healthy<br>With Food Network</h1>
+            <p>Imagine you don't need a diet because we provide healthy and delicious food for you!</p>
+            <a class="button" target="_blank" href="#">Order Food</a>
+        </div>
+        <div class="food-order">
+            <img src="images/female/Group 8425.png" alt="">
+        </div>
+    </section>
 </body>
 
 </html>
