--- a/index.html
+++ b/index.html
@@ -23,6 +23,19 @@
             <img src="images/female/Group 8425.png" alt="">
         </div>
     </section>
+    <section class="mid-field">
+        <div class="food-order">
+            <img id="female-image" src="images/female/Person Image.png" alt="">
+
+        </div>
+        <div class="food-order">
+            <h2>About Us</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus vel architecto totam sed veritatis
+                sunt assumenda recusandae minima deleniti eligendi obcaecati aperiam quisquam porro quidem quasi soluta
+                velit, asperiores omnis?</p>
+            <a class="button" target="_blank" href="#">Contact Me</a>
+        </div>
+    </section>
 </body>
 
 </html>
