correction of middle part

--- a/index.html
+++ b/index.html
@@ -30,11 +30,15 @@
         </div>
         <div class="food-order">
             <h2>About Us</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus vel architecto totam sed veritatis
+            <p class="para">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus vel architecto totam sed
+                veritatis
                 sunt assumenda recusandae minima deleniti eligendi obcaecati aperiam quisquam porro quidem quasi soluta
                 velit, asperiores omnis?</p>
             <a class="button" target="_blank" href="#">Contact Me</a>
         </div>
+    </section>
+    <section>
+        <h2>My Reciepies</h2>
     </section>
 </body>
 
