--- a/index.html
+++ b/index.html
@@ -37,8 +37,42 @@
             <a class="button" target="_blank" href="#">Contact Me</a>
         </div>
     </section>
-    <section>
-        <h2>My Reciepies</h2>
+    <section class="foods-sector">
+        <h3>My Reciepies</h3>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur, ea cupiditate et tempore reprehenderit
+            architecto repellendus modi asperiores eveniet.</p>
+    </section>
+    <section class="foods">
+        <div class="food-item">
+            <img src="images/food/Project Cover1.jpg" alt="">
+            <h4>beef Steak</h4>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+        </div>
+        <div class="food-item">
+            <img src="images/food/Project Cover.jpg" alt="">
+            <h4>Vegetable</h4>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+        </div>
+        <div class="food-item">
+            <img src="images/food/Project Cover.png" alt="">
+            <h4>Noodles</h4>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+        </div>
+    </section>
+    <section class="social-media">
+        <div class="media">
+            <h2>700k</h2>
+            <p>YouTube Subscriber</p>
+        </div>
+        <div class="media">
+            <h2>2.4m</h2>
+            <p>Instagram</p>
+        </div>
+        <div class="media">
+            <h2>700k</h2>
+            <p>Twiter</p>
+        </div>
+
     </section>
 </body>
 
