--- a/index.html
+++ b/index.html
@@ -74,6 +74,10 @@
         </div>
 
     </section>
+    <footer>
+        <h1><span class="orange">WOW</span> FOOD</h1>
+        <p>Bet You Can't Eat Less!</p>
+    </footer>
 </body>
 
 </html>
